Fix spacing in social media bar contact form

--- a/desktop.css
+++ b/desktop.css
@@ -160,6 +160,7 @@
 
   form {
     width: 55%;
+    max-width: 100%;
     margin: 0;
   }
   
